# apps/server/openapi.json
@@ -32,7 +32,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateTestDto"
+                "$ref": "#/components/schemas/CreateTestModel"
               }
             }
           }
@@ -61,7 +61,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateTestDto"
+                "$ref": "#/components/schemas/UpdateTestModel"
               }
             }
           }
@@ -200,7 +200,7 @@
           "deletedTime"
         ]
       },
-      "CreateTestDto": {
+      "CreateTestModel": {
         "type": "object",
         "properties": {
           "name": {
@@ -215,7 +215,7 @@
           "email"
         ]
       },
-      "UpdateTestDto": {
+      "UpdateTestModel": {
         "type": "object",
         "properties": {
           "id": {
@@ -272,9 +272,6 @@
             "type": "string",
             "nullable": true
           },
-          "label": {
-            "type": "string"
-          },
           "cssProperty": {
             "type": "string"
           },
@@ -317,7 +314,6 @@
         "required": [
           "id",
           "componentVariantId",
-          "label",
           "cssProperty",
           "valueKind",
           "stringValue",
@@ -327,7 +323,7 @@
           "format"
         ]
       },
-      "ExceptionResponseDto": {
+      "ExceptionResponseModel": {
         "type": "object",
         "properties": {
           "source": {
@@ -377,9 +373,6 @@
           "key": {
             "type": "string"
           },
-          "name": {
-            "type": "string"
-          },
           "order": {
             "type": "string"
           },
@@ -390,7 +383,6 @@
         "required": [
           "id",
           "key",
-          "name",
           "order",
           "props"
         ]
@@ -402,9 +394,6 @@
             "type": "string"
           },
           "name": {
-            "type": "string"
-          },
-          "tagName": {
             "type": "string"
           },
           "props": {
@@ -420,7 +409,6 @@
         "required": [
           "id",
           "name",
-          "tagName",
           "props",
           "variants"
         ]
@@ -443,6 +431,181 @@
         },
         "required": [
           "componentVersionId",
+          "componentVersion",
+          "components"
+        ]
+      },
+      "ComponentPlacementType": {
+        "type": "string",
+        "enum": [
+          "Standalone",
+          "Fragment"
+        ]
+      },
+      "ComponentManifestVariantModel": {
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "order": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "key",
+          "order"
+        ]
+      },
+      "ComponentPropType": {
+        "type": "string",
+        "enum": [
+          "String",
+          "Number",
+          "Boolean",
+          "Event"
+        ]
+      },
+      "ComponentManifestPropModel": {
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "type": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ComponentPropType"
+              }
+            ]
+          },
+          "required": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "key",
+          "type",
+          "required"
+        ]
+      },
+      "ComponentPartKind": {
+        "type": "string",
+        "enum": [
+          "Element",
+          "Component"
+        ]
+      },
+      "ComponentManifestStyleModel": {
+        "type": "object",
+        "properties": {
+          "variantKey": {
+            "type": "string"
+          },
+          "cssProperty": {
+            "type": "string"
+          },
+          "rawValue": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "variantKey",
+          "cssProperty",
+          "rawValue"
+        ]
+      },
+      "ComponentManifestPartModel": {
+        "type": "object",
+        "properties": {
+          "tagName": {
+            "type": "string"
+          },
+          "kind": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ComponentPartKind"
+              }
+            ]
+          },
+          "order": {
+            "type": "number"
+          },
+          "styles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestStyleModel"
+            }
+          },
+          "children": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestPartModel"
+            }
+          }
+        },
+        "required": [
+          "tagName",
+          "kind",
+          "order",
+          "styles",
+          "children"
+        ]
+      },
+      "ComponentManifestComponentModel": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "placementType": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/ComponentPlacementType"
+              }
+            ]
+          },
+          "variants": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestVariantModel"
+            }
+          },
+          "props": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestPropModel"
+            }
+          },
+          "parts": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestPartModel"
+            }
+          }
+        },
+        "required": [
+          "name",
+          "placementType",
+          "variants",
+          "props",
+          "parts"
+        ]
+      },
+      "ComponentManifestUploadModel": {
+        "type": "object",
+        "properties": {
+          "componentVersion": {
+            "type": "string"
+          },
+          "components": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComponentManifestComponentModel"
+            }
+          }
+        },
+        "required": [
           "componentVersion",
           "components"
         ]
